--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/garlic-parmesan-shrimp.html">garlic-parmesan-shrimp</a>
+        <ul>
+            <li><a href="./recipes/garlic-parmesan-shrimp.html">garlic-parmesan-shrimp</a></li>
+            <li><a href="./recipes/chicken-casserole.html">Million Dollar Chicken Casserole</a></li>
+            <li><a href="./recipes/guisado-verde.html">Slow Cooker Guisado Verde</a></li>
+        </ul>
     </body>
 </html>
