add css styles to website

--- a/index.html
+++ b/index.html
@@ -4,13 +4,30 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="none">Odin Recipes</h1>
         <ul>
-            <li><a href="./recipes/garlic-parmesan-shrimp.html">garlic-parmesan-shrimp</a></li>
-            <li><a href="./recipes/chicken-casserole.html">Million Dollar Chicken Casserole</a></li>
-            <li><a href="./recipes/guisado-verde.html">Slow Cooker Guisado Verde</a></li>
+
+            <li>
+                <a href="./recipes/garlic-parmesan-shrimp.html"><img src="./img/shrimp.webp" alt="shrimp"></a>
+                <h5>SHRIMP</h5>
+                <a href="./recipes/garlic-parmesan-shrimp.html"><h1>Garlic-Parmesan Shrimp</h1></a>
+            </li>
+
+            <li>
+                <a href="./recipes/chicken-casserole.html"><img src="./img/chicken.webp" alt="chicken"></a>
+                <h5>CHICKEN</h5>
+                <a href="./recipes/chicken-casserole.html"><h1>Million Dollar Chicken Casserole</h1></a>
+            </li>
+
+            <li>
+                <a href="./recipes/guisado-verde.html"><img src="./img/shrimp.webp" alt="shrimp"></a>
+                <h5>PORK</h5>
+                <a href="./recipes/chicken-casserole.html"><h1>Slow Cooker Guisado Verde</h1></a>
+            </li>
+
         </ul>
     </body>
 </html>
