--- a/recipes/garlic-parmesan-shrimp.html
+++ b/recipes/garlic-parmesan-shrimp.html
@@ -4,9 +4,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Garlic-Parmesan Shrimp</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1>Garlic-Parmesan Shrimp</h1>
+        <h1 class="none">Garlic-Parmesan Shrimp</h1>
         <img src="../img/shrimp.webp" alt="garlic-parmesan photo">
         <h2>Description</h2>
         <p>Delicious crispy shrimp coated in a bread crumb-Parmesan mixture. My family can't get enough of it! I would suggest doubling the recipe if you have very large eaters because this is addictive! Serve with pasta and salad.</p>
@@ -14,7 +15,7 @@
         <br>
 
         <h2>Ingredients</h2>
-        <ul>
+        <ul class="ing">
             <li>nonstick cooking spray</li>
             <li>1 cup dry bread crumbs</li>
             <li>1 cup shredded parmesan cheese</li>
