--- a/recipes/guisado-verde.html
+++ b/recipes/guisado-verde.html
@@ -4,9 +4,10 @@
     <head>
         <meta charset="URF-8">
         <title>Guisado Verde</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1>Slow Cooker Guisado  Verde</h1>
+        <h1 class="none">Slow Cooker Guisado  Verde</h1>
         <img src="../img/guisado.webp" alt="Chicken guisado picture">
         <h2>Description</h2>
         <p>An easy tomatillo and pork stew that is my boyfriend's favorite. Make it as spicy as you like by adding more or less jalapenos, or do not add any if you have a more tender palate.</p>
@@ -14,7 +15,7 @@
         <br>
         
         <h2>Ingredients</h2>
-        <ul>
+        <ul class="ing">
             <li>2 tablespoons vegetable oil</li>
             <li>2 pounds boneless pork shoulder</li>
             <li>1 large onion, coarsely chopped</li>
