--- a/recipes/chicken-casserole.html
+++ b/recipes/chicken-casserole.html
@@ -4,9 +4,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Chicken casserole</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1>Million Dollar Chicken Casserole</h1>
+        <h1 class="none">Million Dollar Chicken Casserole</h1>
         <img src="../img/chicken.webp" alt="chicken casserole picture">
         <h2>Description</h2>
         <p>Creamy and incredibly savory, it's a casserole that's hard to stop eating. The cottage cheese is the trick to getting such a creamy, melty texture. Using rotisserie chicken is a must for the recipe and helps keep it quick.</p>
@@ -14,7 +15,7 @@
         <br>
 
         <h2>Ingredients</h2>
-        <ul>
+        <ul class="ing">
             <li>1 (10.5 ounce) can cream of chicken soup</li>
             <li>1 cup cottage cheese</li>
             <li>½ cup sour cream</li>
